k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-html-demo
  labels:
    app: devops-html-demo
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: devops-html-demo
